# Primrose

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  calculator.cpp  calculator.h  client.cpp  client.h  fhe_adapter.cu  fhe_adapter.h  main.cpp  models.h  params.h  server.cpp  server.h
src/util/: CMakeLists.txt  taskmanager.h  vectorutil.cpp  vectorutil.h
